--- a/index.html
+++ b/index.html
@@ -1,37 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Age calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Day
-  DD
-
-  Month
-  MM
-
-  Year
-  YYYY
-
-  -- years
-  -- months
-  -- days
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Changa+One&family=Hanken+Grotesk:ital,wght@1,800&family=Manrope:wght@200&family=Nanum+Myeongjo&family=Playfair+Display&family=Poppins:ital,wght@0,700;1,400;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <script src="./script.js" defer></script>
+    <title>Age calculator app</title>
+  </head>
+  <body>
+    <div class="container">
+      <form action="">
+        <div class="date">
+          <div class="block day">
+            <label for="day-input">DAY</label>
+            <input
+              type="number"
+              id="day-input"
+              placeholder="DD"
+              id="day-input"
+              min="0"
+            />
+            <small></small>
+          </div>
+          <div class="block month">
+            <label for="month-input">MONTH</label>
+            <input
+              type="number"
+              id="month-input"
+              placeholder="MM"
+              id="month-input"
+              min="0"
+            />
+            <small></small>
+          </div>
+          <div class="block year">
+            <label for="year-input">YEAR</label>
+            <input
+              type="number"
+              id="year-input"
+              placeholder="YYYY"
+              id="year-input"
+              min="1920"
+            />
+            <small></small>
+          </div>
+        </div>
+        <div class="submit">
+          <hr />
+          <button id="submit-btn">
+            <img src="./assets/images/icon-arrow.svg" alt="" />
+          </button>
+        </div>
+      </form>
+      <div class="outcome">
+        <h1><span id="yearDisplay">--</span>years</h1>
+        <h1><span id="monthDisplay">--</span>months</h1>
+        <h1><span id="dayDisplay">--</span>days</h1>
+      </div>
+    </div>
+  </body>
 </html>
