--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Changa+One&family=Hanken+Grotesk:ital,wght@1,800&family=Manrope:wght@200&family=Nanum+Myeongjo&family=Playfair+Display&family=Poppins:ital,wght@0,700;1,400;1,800&display=swap"
       rel="stylesheet"
     />
-    <script src="./script.js" defer></script>
+    <script src="./script.js" type="module" defer></script>
     <title>Age calculator app</title>
   </head>
   <body>
@@ -53,7 +53,7 @@
         </div>
         <div class="submit">
           <hr />
-          <button id="submit-btn">
+          <button id="submit-btn" title="submit button">
             <img src="./assets/images/icon-arrow.svg" alt="" />
           </button>
         </div>
