Adding mobile styling

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
           <button id="submit-btn" title="submit button">
             <img src="./assets/images/icon-arrow.svg" alt="" />
           </button>
+          <hr class="showHr" />
         </div>
       </form>
       <div class="outcome">
